second commit added

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment one by Salma Akter Jony</title>
+    <title>Help people</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section id="top-banner">
         <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
-            noluisse, enim</p>
+        <p>"Be steadfast in prayer, practice regular charity, and bow down your heads with those who bow down (in
+            worship)" (2:43).</p>
         <a class="donate-now" href="#" target="_blank">Donate Now</a>
     </section>
 
     <section>
         <h2>Donate Today</h2>
-        <p class="short-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p class="short-description">"Be steadfast in prayer, practice regular charity, and bow down your heads with
+            those who bow down (in worship)" (2:43).</p>
 
         <div class="flex-div">
             <div class="tk">
@@ -53,35 +53,29 @@
 
     <section>
         <h2>Our Donate Plan</h2>
-        <p class="short-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p class="short-description">"Be steadfast in prayer, practice regular charity, and bow down your heads with
+            those who bow down (in worship)" (2:43).</p>
 
         <div class="flex2-div">
             <div class="donate-plan plan1">
                 <img src="icons/food.png" alt="image is missing">
                 <h4>Food for a family</h4>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>"Worship none but Allah. treat with kindness your parents and kindred, and orphans and those in need;
+                    speak fair to the people; be steadfast in prayer; and practice regular charity" (2:83).</p>
             </div>
 
             <div class="donate-plan plan2">
                 <img src="icons/shelter.png" alt="image is missing">
                 <h4>Shelter for a family</h4>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>"Be steadfast in prayer and regular in charity. Whatever good you send forth for your souls before
+                    you, you shall find it with Allah. For Allah sees well all that you do" (2:110).</p>
             </div>
 
             <div class="donate-plan plan3">
                 <img src="icons/Frame-1.png" alt="image is missing">
                 <h4>Education for a child</h4>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>"Those who in charity spend of their goods by night and by day, in secret and in public, have their
+                    reward with their Lord: on them shall be no fear, nor shall they grieve" (2:274).</p>
             </div>
         </div>
     </section>
@@ -98,8 +92,8 @@
 
     <section>
         <h2>Get My Updates</h2>
-        <p class="short-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p class="short-description">Let's go for subscribe so that you can updated by the notice provided by this site.
+        </p>
 
         <form id="subscription-form">
             <input id="email-input" type="email" placeholder="Email">
